--- a/style.css
+++ b/style.css
@@ -1,33 +1,29 @@
 .container {
+  max-width: 600px;
+  margin: 0 auto;
   text-align: center;
 }
 
-h1 {
-  font-size: 24px;
+.board {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-#puzzleBoard {
-  width: 300px;
-  height: 300px;
-  margin: 20px auto;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#puzzleBoard div {
-  width: 100px;
-  height: 100px;
-  background-color: lightblue;
-  border: 1px solid white;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.tile {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  border: 1px solid black;
+  background-size: cover;
+  background-position: center;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 
-#puzzleBoard img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.tile:hover {
+  transform: scale(1.02);
+}
+
+.empty {
+  visibility: hidden;
 }
